     message.  To load the body into the Folder Buffer, use:

     command: vm-refresh-message

     This command discards the current body of the message, if any,
     and refreshes it from the server copy.

     Some of the VM operations, e.g., vm-save-message, can only be
     performed if the body is loaded into the Folder Buffer.

     FAILURE RECOVERY: If the cache folder gets corrupted for any
     reason, just delete it from the file system.  A new cache folder
     will be generated upon the next visit.

  ** The commands `vm-mime-save-all-attachments' and
    `vm-mime-delete-all-attachments' have been moved to the VM core
    (from vm-rfaddons).  New variables:
       vm-mime-deletable-types 
          (formerly `vm-mime-delete-all-attachments-types')
       vm-mime-deletable-type-exceptions
          (formerly `vm-mime-delete-all-attachments-types-exceptions')
       vm-mime-savable-types
          (formerly `vm-mime-save-all-attachments-types')
       vm-mime-savable-type-exceptions
          (formerly `vm-mime-save-all-attachments-types-exceptions')         
       vm-mime-attachment-save-directory
       vm-mime-attachment-source-directory
       vm-mime-all-attachments-directory
    See the info file section on MIME attachments for details.

    The options for vm-rfaddons.el should not include
    `save-all-attachments' and should be removed if it is currently
    being used.  The option `take-action-on-attachments' is not
    included by default.

  * `vm-quit-no-change' offers to delete the auto-save file if there is
    one.  (This wasn't getting done due to a bug in FSF Emacs.)

  * `vm-delete-duplicate-messages' now works by comparing message ID's.
    (from Noah Friedman's vm-addons).

  * New boolean variable `vm-sort-threads-by-youngest-date' allows
    threads to be sorted by their youngest date or oldest date.

  * `vm-yank-message' function streamlined a bit.  New variable
    `vm-include-text-from-presentation' can be used to extract the