@@ -2836,36 +2836,82 @@ only marked messages are refreshed, other messages are ignored."
 	(inhibit-read-only t)
 	(buffer-undo-list t)
 	(text-begin nil)
-	(end nil))
+	(text-end nil))
 ;;     (if (not used-marks) 
 ;; 	(setq mlist (list (car vm-message-pointer))))
-    (while mlist
-      (setq mm (car mlist))
-      (setq text-begin (marker-position (vm-text-of mm)))
-      (setq end (marker-position (vm-end-of mm)))
-      (goto-char text-begin)
-      (delete-region (point) end)
-      (apply (intern (format "vm-fetch-%s-message" "imap"))
-	     mm nil)
-      ;; delete the new headers
-      (delete-region text-begin
-		     (or (re-search-forward "\n\n" (point-max) t)
-			 (point-max)))
-      ;; fix markers now
-      ;; FIXME the text-end is guessed
-      (set-marker (vm-end-of mm) (point-max))
-      (set-marker (vm-text-of mm) text-begin)
-      (set-marker (vm-text-end-of mm) 
-		  (save-excursion
-		    (goto-char (point-max))
-		    (end-of-line 0)	; move back one line
-		    (point)))
-      ;; now care for the layout of the message, old layouts are invalid as the
-      ;; presentation buffer may have been used for other messages in the
-      ;; meantime and the marker got invalid by this.
-      (vm-set-mime-layout-of mm (vm-mime-parse-entity-safe mm))
-      (vm-set-body-to-be-retrieved mm nil)
-      (setq mlist (cdr mlist)))
+    (vm-save-restriction
+     (while mlist
+       (widen)
+       (setq mm (car mlist))
+       (setq text-begin (marker-position (vm-text-of mm)))
+       (setq text-end (marker-position (vm-text-end-of mm)))
+       (narrow-to-region (marker-position (vm-headers-of mm)) text-end)
+       (goto-char text-begin)
+       (delete-region (point) (point-max))
+       (apply (intern (format "vm-fetch-%s-message" "imap"))
+	      mm nil)
+       ;; delete the new headers
+       (delete-region text-begin
+		      (or (re-search-forward "\n\n" (point-max) t)
+			  (point-max)))
+       ;; fix markers now
+       ;; FIXME the text-end is guessed
+       (set-marker (vm-text-of mm) text-begin)
+       (set-marker (vm-text-end-of mm) 
+		   (save-excursion
+		     (goto-char (point-max))
+		     (end-of-line 0)	; move back one line
+		     (kill-line 1)
+		     (point)))
+       (goto-char text-begin)
+       ;; now care for the layout of the message
+       (vm-set-mime-layout-of mm (vm-mime-parse-entity-safe mm))
+       (vm-set-body-to-be-retrieved mm nil)
+       (setq mlist (cdr mlist))))				
+    ))
+
+(defun vm-unload-message (&optional count)
+  "Unload the message body.  It can be retrieved again from its
+permanent location.  Currently this facility is only available
+for IMAP folders.
+
+With a prefix argument COUNT, the current message and the next 
+COUNT - 1 messages are unloaded.  A negative argument means
+the current message and the previous |COUNT| - 1 messages are
+unloaded.
+
+When invoked on marked messages (via `vm-next-command-uses-marks'),
+only marked messages are unloaded, other messages are ignored."
+  (interactive "p")
+  (if (interactive-p)
+      (vm-follow-summary-cursor))
+  (vm-select-folder-buffer)
+  (vm-check-for-killed-summary)
+  (vm-error-if-folder-read-only)
+  (vm-error-if-virtual-folder)
+  (if (not (eq vm-folder-access-method 'imap))
+      (error "This is currently available only for imap folders."))
+  (let ((used-marks (eq last-command 'vm-next-command-uses-marks))
+	(mlist (vm-select-marked-or-prefixed-messages count))
+	(mm (car vm-message-pointer))
+	(buffer-read-only nil)
+	(inhibit-read-only t)
+	(buffer-undo-list t)
+	(text-begin nil)
+	(text-end nil))
+;;     (if (not used-marks) 
+;; 	(setq mlist (list (car vm-message-pointer))))
+    (vm-save-restriction
+     (widen)
+     (while mlist
+       (setq mm (car mlist))
+       (setq text-begin (marker-position (vm-text-of mm)))
+       (setq text-end (marker-position (vm-text-end-of mm)))
+       (goto-char text-begin)
+       (delete-region (point) text-end)
+       (vm-set-mime-layout-of mm nil)
+       (vm-set-body-to-be-retrieved mm t)
+       (setq mlist (cdr mlist))))				
     ))
 
 
